Fix typos in manual

--- a/hugo/content/manual/knowledgebase/hardware/EL5042.md
+++ b/hugo/content/manual/knowledgebase/hardware/EL5042.md
@@ -107,8 +107,8 @@ For EL5042 the following rates are available:
 NOTE: The closest freq. equal or higher than CLK_FRQ_KHZ will be selected.
 
 #### Wrong communication frequency
-In ecmccfg the default frequency for encoders are set to the lowest possible value, 100kHz. Sometimes increaseing the frequence to 1MHz will result in a more stable reading.
-If possible use ecmccomp instead of ecmccfg for configutration of encoders since, in the ecmccomp repo, the default frequency values are higher and normally more stable.
+In ecmccfg the default frequency for encoders are set to the lowest possible value, 100kHz. Sometimes increasing the frequency to 1MHz will result in a more stable reading.
+If possible use ecmccomp instead of ecmccfg for configuration of encoders since, in the ecmccomp repo, the default frequency values are higher and normally more stable.
 
 See above for available communications rates.
 
