--- a/hugo/content/manual/knowledgebase/hardware/EL70x1.md
+++ b/hugo/content/manual/knowledgebase/hardware/EL70x1.md
@@ -19,7 +19,7 @@ The most common reason for this error is:
 * drive has no motor voltage
 * (PSI specific): EL9227-5500 feeding the I/O bus is not initiated (at first power on the switches on the terminal needs to be engaged)
 
-Further information about the error/warning can be read from from the drive's diagnostic register, [Index A010 STM Diag data Ch.1](https://infosys.beckhoff.com/english.php?content=../content/1033/el70x1/2286662027.html&id=126846504617985959):
+Further information about the error/warning can be read from the drive's diagnostic register, [Index A010 STM Diag data Ch.1](https://infosys.beckhoff.com/english.php?content=../content/1033/el70x1/2286662027.html&id=126846504617985959):
 
 The ecmccfg/utils/read_el70xx_diag.sh tool can be used to read all the diagnostic registers of any ex70xx drive:
 ```bash
