Add diag info to manual

--- a/hugo/content/manual/knowledgebase/hardware/EL5042.md
+++ b/hugo/content/manual/knowledgebase/hardware/EL5042.md
@@ -10,6 +10,7 @@ chapter = false
 3. [Offset LSB Bit [Bit] (0x80p8:17)](#offset-lsb-bit-bit-0x80p817)
 4. [SSI](#ssi)
 5. [9V supply](#9v-supply)
+6. [Diagnostics](#Diagnostics)
 
 ---
 
@@ -240,3 +241,8 @@ In order to monitor the voltage an analog input card can be used.
 {{% notice info %}}
 **If old style ecmccfg encoder configuration scripts are used, then they normally set the supply voltage to 5V. This results in that the slave will not go o OP since it conflicts with the 9V setting. Use ecmccomp configurations instead, in ecmccomp the power setting is not set.**
 {{% /notice %}}
+
+### Diagnostics
+
+See the hardware diagnostics page.
+
