--- a/hugo/content/manual/knowledgebase/hardware/EL7062.md
+++ b/hugo/content/manual/knowledgebase/hardware/EL7062.md
@@ -9,6 +9,7 @@ chapter = false
 2. [openloop counter jump](#openloop-counter-jump)
 3. [tuning](#tuning)
 4. [home on index pulse of incremental encoder](#home-on-index-pulse-of-incremental-encoder)
+5. [Diagnostics](#Diagnostics)
 
 ### error/warning
 If the drive is in error/warning state and not possible to enable, see [drive refuse to enable](../../motion/#drive-refuse-to-enable).
@@ -196,3 +197,8 @@ ${SCRIPTEXEC} ${ecmccfg_DIR}loadYamlAxis.cmd,   "FILE=./cfg/axis.yaml,          
 # Configure incremental encoder
 ${SCRIPTEXEC} ${ecmccfg_DIR}loadYamlEnc.cmd,    "FILE=./cfg/enc_inc.yaml, DEV=${IOC}, ENC_SID=${DRV_SID},ENC_CH=02"
 ```
+
+### Diagnostics
+
+See the hardware diagnostics page.
+
