--- a/hugo/content/manual/knowledgebase/hardware/EL70x1.md
+++ b/hugo/content/manual/knowledgebase/hardware/EL70x1.md
@@ -9,6 +9,7 @@ chapter = false
 2. [tuning](#tuning)
 3. [Speed range](#speed-range)
 4. [EP7041-3102 scaling](#EP7041-3102-scaing)
+5. [Diagnostics](#Diagnostics)
 
 c
 If the drive is in error/warning state and not possible to enable, see [drive refuse to enable](../../motion/#drive-refuse-to-enable).
@@ -160,3 +161,8 @@ encoder.denominator : 12800  # micro steps for 1 rev (200 fullsteps * 64 micro s
 {{% notice warning %}}
 **Do not use the 256 micro-stepping levels for scaling**
 {{% /notice %}}
+
+### Diagnostics
+
+See the hardware diagnostics page.
+
